apps/monitoring/templates/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: monitoring-v2.legodard.fr
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
